@@ -1,3 +1,12 @@
+2003-08-25  Jon Schewe  <jpschewe@mtu.net>
+
+	* src/fll/gui/SubjectiveFrame.java: Display title attribute rather
+	than name attribute from subjective categories, also changed in
+	the report generation classes (707873).
+
+	* src/resources/fll.xsd: Added title attribute to subjective
+	category element (707873).
+
 2003-08-16  Jon Schewe  <jpschewe@mtu.net>
 
 	* Multiple files: Added display page the is used for the display
